# AdvancedProgramming3

./: CMakeLists.txt  DefaultIO.h  README.md  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h  client.cpp  server.cpp  tools.cpp  tools.h  utils.cpp  utils.h
Client/: CMakeLists.txt  Tclient.cpp  Tclient.h  main.cpp  mainC.cpp
Server/: CLI.h  CMakeLists.txt  Classifiable.h  ClientData.h  Iris.cpp  Iris.h  KnnClassifier.h  Matrix.cpp  Matrix.h  Tserver.cpp  Tserver.h  main.cpp  mainS.cpp
Server/IO/: DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
Server/commands/: ChangeSettingsCommand.h  ClassifyDataCommand.h  Command.h  ConfusionMatrixCommand.h  DisplayResultsCommand.h  DownloadResultsCommand.h  UploadUnclassifiedCommand.h
Server/metrics/: ChebyshevDistance.h  Distance.h  EuclideanDistance.h  ManhattanDistance.h
client/: client.cpp
server/: server.cpp
x/: Knn.cpp  Knn.h  distanceN.cpp  distanceN.h  flower.cpp  flower.h  pointS.cpp  pointS.h
