cmake_minimum_required(VERSION 3.17.5)
project(client)
project(server)
set(CMAKE_CXX_STANDARD 14)

include_directories(x)
include_directories(Server)
include_directories(Client)
include_directories(Server/IO)
add_executable(server Server/mainS.cpp Server/Tserver.cpp Server/Tserver.h x/distanceN.cpp x/flower.cpp x/Knn.cpp x/pointS.cpp Server/IO/DefaultIO.h Server/IO/SocketIO.cpp Server/IO/SocketIO.h Server/IO/StandardIO.cpp Server/IO/StandardIO.h tools.cpp tools.h)
add_executable(client Client/mainC.cpp Client/Tclient.cpp Client/Tclient.h)